# socionics-research

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_KICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  overview.md  roadmap.md  scraping_guide.md
examples/: README.md  add_personality.py  init_database.py  kl_divergence_example.py  scrape_sociotype_xyz.py  search_person.py
notebooks/: placeholder.ipynb
src/socionics_research/: __init__.py
src/socionics_research/analysis/: __init__.py  kl_divergence.py
src/socionics_research/database/: __init__.py  schema.py
src/socionics_research/llm/: __init__.py  client.py
src/socionics_research/pipeline/: __init__.py  playwright_scraper.py  scraper.py  sociotype_scraper.py
tests/: test_database.py  test_kl_divergence.py  test_playwright_scraper.py  test_scrape_with_fallback.py  test_scraper.py  test_smoke.py  test_sociotype_scraper.py
