[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socionics-research"
version = "0.1.0"
description = "Beginner-friendly Python project scaffold (ML-ready) for socionics research"
authors = [{ name = "YOUR NAME", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
